# CMforAI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cmforai/: __init__.py  analyzer.py  cli.py  config.py  file_analyzer.py  generator.py  gui.py
